--- a/FunRowShowView/CaseFun.html
+++ b/FunRowShowView/CaseFun.html
@@ -5,15 +5,15 @@
 		<meta charset="utf-8">
 		<title>CaseFun View</title>
 	</head>
-	<body>
+	<body style="height: 100%; margin: 0">
 		<div>
 				<input id="inputuid" type="search" name="UIDinput" placeholder="请输入UUID" class="uid-box"/>
 				<input id="inputfunname" type="search" name="search" placeholder="请输入函数名" class="search-box"/>
 				<input id="button-id" type="submit" value="查询函数数据" class="search-button"/>
 		</div>
-		<div id="timecontainer" style="height: 100%"></div>
-		<div id="gccontainer" style="height: 100%"></div>
-		<div id="callcontainer" style="height: 100%"></div>
+		<div id="timecontainer" style="height: 300px"></div>
+		<div id="gccontainer" style="height: 300px"></div>
+		<div id="callcontainer" style="height: 300px"></div>
 			
 		<script src="js/echarts.min.js"></script>
 		<script src="js/chart.js"></script>
