--- a/FunRowShowView/index.html
+++ b/FunRowShowView/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="css/view.css"/>
 	<meta charset="utf-8">
 </head>
-<body style="height: 100%; margin: 0">
+<body>
 	<div>
 		<button id="btn-id" class="btn-class">SpeedCope视图(FlameGraph)</button>
 		<button id="btn2-id" class="btn-class">函数表视图</button>
