优化前端展示与数据返回

--- a/FunRowShowView/CaseFun.html
+++ b/FunRowShowView/CaseFun.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="css/view.css"/>
+		<!-- 引入 SweetAlert 库 -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.css">
 		<meta charset="utf-8">
 		<title>CaseFun View</title>
 	</head>
@@ -14,8 +16,10 @@
 		<div id="timecontainer" style="height: 300px"></div>
 		<div id="gccontainer" style="height: 300px"></div>
 		<div id="callcontainer" style="height: 300px"></div>
-			
+		
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.js"></script>
 		<script src="js/echarts.min.js"></script>
 		<script src="js/chart.js"></script>
+		
 	</body>
 </html>
