--- a/FunRowShowView/index.html
+++ b/FunRowShowView/index.html
@@ -19,7 +19,15 @@
 		<h2 style="color: chocolate;">报告列表</h2>
 		<hr/>
 		<div>
-			<span>None Data</span>
+			<span>
+				<ul id="itemList">
+				  <li>苹果</li>
+				  <li>香蕉</li>
+				  <li>橙子</li>
+				  <li>葡萄</li>
+				  <li>西瓜</li>
+				</ul>
+			</span>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.js"></script>
 		<script src="js/SwitchView.js"></script>
