sweetalert添加源代码

--- a/FunRowShowView/CaseFun.html
+++ b/FunRowShowView/CaseFun.html
@@ -21,7 +21,7 @@
 		</div>
 		<script src="js/d3js.org_d3.v7.js"></script>
 		<script src="js/cdn.jsdelivr.net_npm_d3-flame-graph@4.1.3_dist_d3-flamegraph.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.js"></script>
+		<script src="js/sweetalert2.min.js"></script>
 		<script src="js/echarts.min.js"></script>
 		<script src="js/chart.js"></script>
 		
