--- a/FunRowShowView/index.html
+++ b/FunRowShowView/index.html
@@ -29,7 +29,7 @@
 				</ul>
 			</span>
 		</div>
-		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.js"></script>
+		<script src="js/sweetalert2.min.js"></script>
 		<script src="js/SwitchView.js"></script>
 	</body>
 </html>
