--- a/FunRowShowView/flamegraph.html
+++ b/FunRowShowView/flamegraph.html
@@ -4,7 +4,7 @@
 <body>
   <div id="chart"></div>
   <script type="text/javascript" src="https://d3js.org/d3.v7.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/d3-flame-graph@4.1.3/dist/d3-flamegraph.min.js"></script>
+  <script type="text/javascript" src="js/sweetalert2.min.js"></script>
   <script type="text/javascript">
   var chart = flamegraph()
     .width(960);
